# Aerial_HumanLike_Manipulator_ROS

./: README.md
devel/: .catkin
devel/include/aeriaman/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/aeriaman/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/pkgconfig/: aeriaman.pc  man_controller.pc  man_gazebo.pc  pr2_controller_interface.pc  pr2_hardware_interface.pc  pr2_mechanism_diagnostics.pc  pr2_mechanism_model.pc  pr2_mechanism_msgs.pc  ros_control.pc
devel/lib/python2.7/dist-packages/aeriaman/msg/: _Num.py
devel/lib/python2.7/dist-packages/aeriaman/srv/: _AddTwoInts.py
devel/share/aeriaman/cmake/: aeriaman-msg-extras.cmake  aeriaman-msg-paths.cmake  aeriamanConfig.cmake
devel/share/common-lisp/ros/aeriaman/msg/: Num.lisp  _package.lisp  _package_Num.lisp  aeriaman-msg.asd
devel/share/common-lisp/ros/aeriaman/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  aeriaman-srv.asd
devel/share/gennodejs/ros/aeriaman/msg/: Num.js
devel/share/gennodejs/ros/aeriaman/srv/: AddTwoInts.js
devel/share/man_controller/cmake/: man_controllerConfig.cmake
devel/share/man_gazebo/cmake/: man_gazeboConfig.cmake
devel/share/pr2_controller_interface/cmake/: pr2_controller_interfaceConfig-version.cmake  pr2_controller_interfaceConfig.cmake
devel/share/pr2_hardware_interface/cmake/: pr2_hardware_interfaceConfig.cmake
devel/share/pr2_mechanism_diagnostics/cmake/: pr2_mechanism_diagnosticsConfig.cmake
devel/share/pr2_mechanism_model/cmake/: pr2_mechanism_modelConfig.cmake
devel/share/pr2_mechanism_msgs/cmake/: pr2_mechanism_msgs-msg-extras.cmake  pr2_mechanism_msgs-msg-paths.cmake  pr2_mechanism_msgsConfig-version.cmake  pr2_mechanism_msgsConfig.cmake
devel/share/ros_control/cmake/: ros_controlConfig.cmake
devel/share/roseus/ros/aeriaman/: manifest.l
devel/share/roseus/ros/aeriaman/msg/: Num.l
devel/share/roseus/ros/aeriaman/srv/: AddTwoInts.l
src/aeriaman/: CMakeLists.txt  package.xml  urdf.rviz
src/aeriaman/launch/: man_rviz.launch
src/aeriaman/meshes/: ibr_arm2_part1.STL  ibr_arm2_part2.STL
src/aeriaman/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
src/aeriaman/urdf/: man.gazebo  man.urdf  man.xacro
src/man_controller/: CMakeLists.txt  package.xml
src/man_controller/src/: controller.cpp
src/man_gazebo/: CMakeLists.txt
src/man_gazebo/launch/: man_gazebo.launch
src/my_controller_pkg/: CMakeLists.txt  manifest.xml
src/my_controller_pkg/src/: my_controller_file.cpp
src/ros_control/: CMakeLists.txt  package.xml
src/ros_control/config/: man_control.yaml
src/ros_control/launch/: man_control.launch
src/ros_control/src/: controller.cpp  man_controller.h
